tests/ui/typeck/lvalue/expressions.stderr
error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         (a + b) = a;
   ╰╴         ━━━━━

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         (true ? a : b) = a;
   ╰╴         ━━━━━━━━━━━━

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         (-c) = c;
   ╰╴         ━━

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         retArr() = arr;
   ╰╴        ━━━━━━━━

error: mismatched types
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         arr.push() = arr.pop();
   ╰╴                     ━━━━━━━━━ expected `uint256`, found `tuple()`

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         arr.push(1) = arr.pop();
   ╰╴        ━━━━━━━━━━━

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         data.push(0x01) = arr.pop();
   ╰╴        ━━━━━━━━━━━━━━━

error: expression has to be an lvalue
   ╭▸ ROOT/tests/ui/typeck/lvalue/expressions.sol:LL:CC
   │
LL │         arr.pop() = arr.pop();
   ╰╴        ━━━━━━━━━

error: aborting due to 8 previous errors

